Updated RecyclerView with removal to showcase animations.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Recycler View Demos</string>
+    <string name="remove_random_item">Remove Random Item</string>
 </resources>
